fix: `Client.ping()` and `requireExactNode()` condition